[project]
name = "stockseek"
version = "0.1.0"
description = ""
authors = [
    {name = "lihan"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "yfinance (>=0.2.51,<0.3.0)",
    "smolagents (>=1.1.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
